# Slacks

./: CMakeLists.txt  main.c
include/slacks/: common.h  http.h  json.h
include/slacks/slack/: slack_webclient.h
src/: http.c  json.c  json_parser.c  murmur.c  sstream.c  symbol.c
src/slack/: slack_webclient.c
